--- a/src/blocks/btn-like/btn-like.pug
+++ b/src/blocks/btn-like/btn-like.pug
@@ -1,4 +1,4 @@
-mixin btn-like(quantity)
+mixin btn-like(btnLike)
     button(class='btn-like') 
         i(class='fas fa-heart') 
-        span(class='btn-like__quantity')= quantity
+        span(class='btn-like__quantity')= btnLike.quantity
