--- a/src/blocks/dropdown/dropdown.scss
+++ b/src/blocks/dropdown/dropdown.scss
@@ -98,12 +98,12 @@
     font-size: 1rem;
     line-height: 15px;
     text-transform: uppercase;
-    color: rgba(31, 32, 65, 0.5);
     border: none;
     background: transparent;
     outline: none;
     margin: 30px 0 10px 0px;
     cursor: pointer;
+    color: transparent;
   }
 
   &__apply {
