--- a/src/blocks/range-slider/range-slider.pug
+++ b/src/blocks/range-slider/range-slider.pug
@@ -1,3 +1,3 @@
-mixin range-slider(text)
+mixin range-slider(slider)
     div(class='slider-range' id='slider-range')
-    div(class='slider-range__title')= text
+    div(class='slider-range__title')= slider.text
