--- a/src/components/form-search/form-search.pug
+++ b/src/components/form-search/form-search.pug
@@ -2,6 +2,7 @@ include ../../blocks/dropdown/dropdown.pug
 include ../../blocks/airdatepicker/airdatepicker.pug
 
 mixin form-search(title, subtitle)
+  - var names = ['btn__signin_header', 'btn__confirm_size_footer', 'btn__confirm_size_signup', 'btn__confirm_size_search', 'btn__confirm_size_signin']
   div(class='form-search')
     div(class='form-search__container')
         h1(class='form-search__title')= title
@@ -9,9 +10,9 @@ mixin form-search(title, subtitle)
           h3(class='form-search__subtitle form-search__subtitle_type_checkin')= subtitle.checkin
           h3(class='form-search__subtitle form-search__subtitle_type_checkout')= subtitle.checkout
         div(class='form-search__datepicker')
-          +datepicker('date-dropdown__input_size_search')
+          +datepicker({className: 'date-dropdown__input_size_search'})
         h3(class='form-search__subtitle form-search__subtitle_type_guests')= subtitle.guests
         div(class='form-search__dropdown')
           +dropdown( {id: 'dd-text', name: 'Сколько гостей'}, { name:'Взрослые', number: 'adult_text', plus: 'adult_plus', minus: 'adult_minus'},  {name: 'Дети', number: 'child_text', plus: 'child_plus', minus: 'child_minus' }, {name: 'Младенцы', number: 'baby_text', plus: 'baby_plus', minus: 'baby_minus'})
         div(class='form-search__button')  
-          +button({name: 'подобрать номер', link: 'filter-page.html', className: 'btn__confirm', additionalClass: (classes.indexOf('btn__confirm_size_search') > -1) ? 'btn__confirm_size_search': ''})
+          +button({name: 'подобрать номер', link: 'filter-page.html', className: 'btn__confirm', additionalClass: (names.indexOf('btn__confirm_size_search') > -1) ? 'btn__confirm_size_search': ''})
