--- a/src/blocks/little-dropdown/little-dropdown.scss
+++ b/src/blocks/little-dropdown/little-dropdown.scss
@@ -99,7 +99,7 @@
     font-size: 1rem;
     line-height: 15px;
     text-transform: uppercase;
-    color: rgba(31, 32, 65, 0.5);
+    color: transparent;
     border: none;
     background: transparent;
     outline: none;
