--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -4,7 +4,7 @@ mixin footer(footer, title, linkList1, linkList2, linkList3)
   footer(class='footer')
     div(class='footer__container')
         div(class='footer__column footer__column_theme_slogan')
-          +logo('logo logo_footer')
+          +logo({className: 'logo logo_footer'})
           div
             p(class='footer__slogan')= footer.slogan
         div(class='footer__column')
@@ -12,19 +12,19 @@ mixin footer(footer, title, linkList1, linkList2, linkList3)
           ul(class='footer__items')
             each link in linkList1
               li(class='footer__item')
-               a(class='footer__link')= link
+               a(class='footer__link' href="/mock-address/change-me")= link
         div(class='footer__column')
           h3(class='footer__subtitle')= title.name2
           ul(class='footer__items')
             each link in linkList2
               li(class='footer__item')
-               a(class='footer__link')= link
+               a(class='footer__link' href="/mock-address/change-me")= link
         div(class='footer__column')
           h3(class='footer__subtitle')= title.name3
           ul(class='footer__items')
             each link in linkList3
               li(class='footer__item')
-               a(class='footer__link')= link
+               a(class='footer__link' href="/mock-address/change-me")= link
         div(class='footer__column footer__column_theme_offer')
           h3(class='footer__subtitle')= title.name4
           p(class='footer__text')= footer.offer
@@ -35,7 +35,7 @@ mixin footer(footer, title, linkList1, linkList2, linkList3)
           p(class='footer__copyright')= footer.copyright 
           ul(class='footer__icons')
               li(class='footer__icon')
-                a(href='#')
+                a(href="/mock-address/change-me")
                   svg(width='0' height='0')
                     radialGradient(id='rg' r='150%' cx='30%' cy='107%')
                       stop(stop-color='#8BA4F9' offset='0')
@@ -46,7 +46,7 @@ mixin footer(footer, title, linkList1, linkList2, linkList3)
                   div(class='footer__gradient')
                     i(class='fab fa-twitter' aria-hidden='true')
               li(class='footer__icon')
-                a(href='#')
+                a(href="/mock-address/change-me")
                   svg(width='0' height='0')
                     radialGradient(id='rg' r='150%' cx='30%' cy='107%')
                       stop(stop-color='#BC9CFF' offset='0')
@@ -57,7 +57,7 @@ mixin footer(footer, title, linkList1, linkList2, linkList3)
                   div(class='footer__gradient')
                     i(class='fab fa-facebook-square' aria-hidden='true')
               li(class='footer__icon')
-                a(href='#')
+                a(href="/mock-address/change-me")
                   svg(width='0' height='0')
                     radialGradient(id='rg' r='150%' cx='30%' cy='107%')
                       stop(stop-color='#8BA4F9' offset='0')
