--- a/src/pages/filter-page/filter-page.pug
+++ b/src/pages/filter-page/filter-page.pug
@@ -10,9 +10,10 @@ html
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     meta(name="application-name" content="Toxin Hotel")
   body
+    - var names = ['btn__signin_header', 'btn__confirm_size_footer', 'btn__confirm_size_signup', 'btn__confirm_size_search', 'btn__confirm_size_signin']
     - var signin = true;
-    +header( ['О нас', 'Услуги', 'Вакансии', 'Новости', 'Соглашения'])
-      +button( {name:'Войти', link: 'signin-page.html', additionalClass: (classes.indexOf('btn__signin_header') > -1) ? 'btn__signin_header': ''})
+    +header({links: ['О нас', 'Услуги', 'Вакансии', 'Новости', 'Соглашения'], names: ["/mock-address/change-me"]})
+      +button( {name:'Войти', link: 'signin-page.html', additionalClass: (names.indexOf('btn__signin_header') > -1) ? 'btn__signin_header': ''})
       +button({name: 'Зарегистрироватьcя', link: 'signup-page.html', className: 'btn__signup'})
     include ../../components/room-page/room-page.pug
     +footer({slogan: 'Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»', offer:'Получайте специальные предложения и новости сервиса', copyright: 'Copyright © 2018 Toxin отель. Все права зачищены.'}, {name1: 'навигация', name2: 'о нас', name3: 'Служба поддержки', name4: 'Подписка'}, ['О нас', 'Новости', 'Служба поддержки', 'Услуги'], ['О сервисе', 'Наша команда', 'Вакансии', 'Инвесторы'], ['Соглашения', 'Сообщества', 'Связь с нами'])
