--- a/src/blocks/single-airdatepicker/single-airdatepicker.pug
+++ b/src/blocks/single-airdatepicker/single-airdatepicker.pug
@@ -4,4 +4,5 @@ mixin single-datepicker(singleDatepicker)
             class= singleDatepicker.className
             data-multiple-dates-separator=' - '
             placeholder='ДД.ММ.ГГГГ'
-            class='single-range')
+            class='single-range dateRange')
+            
