--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -41,6 +41,7 @@
     font-family: "Montserrat";
     font-size: 1.14rem;
     color: rgba(31, 32, 65, 0.5);
+    text-decoration: none;
   }
   &__text {
     color: rgba(31, 32, 65, 0.75);
