--- a/src/components/info-room/info-room.pug
+++ b/src/components/info-room/info-room.pug
@@ -11,5 +11,5 @@ include ../information/information.pug
 
 div(class='room-details')
     +gallery
-    +information
+    +information({addClass: 'information_position'})
 hr
