--- a/src/components/information/information.pug
+++ b/src/components/information/information.pug
@@ -1,6 +1,6 @@
-mixin information()
+mixin information(information)
     - var titles = ['information__title_type_info', 'information__title_type_impression', 'information__title_type_details', 'information__title_type_rules', 'information__title_type_cancel']
-    div(class='information')
+    div(class='information' class=information.addClass)
         div(class='information__data')
             div(class='information__wrapper')
                 div
