--- a/src/components/signin-form/signin-form.scss
+++ b/src/components/signin-form/signin-form.scss
@@ -5,7 +5,9 @@
   box-sizing: border-box;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  margin: 0 auto;
+  &_position{
+    margin: 0 auto;
+  }
   &__container {
     padding: 32px 40px 40px 40px;
   }
