--- a/src/components/signin-form/signin-form.pug
+++ b/src/components/signin-form/signin-form.pug
@@ -1,8 +1,9 @@
+
 include ../input-text/input-text.pug
 mixin form-signin(signin)
-  div(class='form-signin')
+  div(class='form-signin' class=signin.addClass)
     div(class='form-signin__container')
-      h1(class='form-signin__title')= signin.title
+      h1(class='form-signin__title')= signin.title 
       +input-text({name: 'Email', className: 'input-text_size_signin'})
       div(class='form-signin__input form-signin__input_type_password')
         +input-text({name: 'Пароль', className: 'input-text_size_signin'})
@@ -12,3 +13,4 @@ mixin form-signin(signin)
         div(class='form-signin__text')= signin.login
         div(class='form-signin__create')
           +button({name: 'Создать', link: 'signin-page.html', className: 'btn__signin'} )
+
