--- a/src/pages/info-page/info-page.pug
+++ b/src/pages/info-page/info-page.pug
@@ -1,18 +1,3 @@
-include ../../components/header/header.pug
-include ../../components/button/button.pug
-include ../../components/footer/footer.pug
-doctype html
-html
-  head
-    title Hotel info page
-    meta(charset="UTF-8")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    meta(http-equiv="X-UA-Compatible", content="ie=edge")
-    meta(name="application-name" content="Toxin Hotel")
-  body
-    +header({links: ['О нас', 'Услуги', 'Вакансии', 'Новости', 'Соглашения'], names: ["/mock-address/change-me"]})
-        +button( {name:'Войти', link: 'signin-page.html',className: 'btn__signin_header'})
-        +button({name:'Зарегистрироватьcя', link: 'signup-page.html', className: 'btn__signup'})
-    br
-    include ../../components/info-room/info-room.pug
-    +footer({slogan: 'Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»', offer:'Получайте специальные предложения и новости сервиса', copyright: 'Copyright © 2018 Toxin отель. Все права зачищены.'}, {name1: 'навигация', name2: 'о нас', name3: 'Служба поддержки', name4: 'Подписка'}, ['О нас', 'Новости', 'Служба поддержки', 'Услуги'], ['О сервисе', 'Наша команда', 'Вакансии', 'Инвесторы'], ['Соглашения', 'Сообщества', 'Связь с нами'])
+extends ../layout.pug
+block content
+  include ../../components/info-room/info-room.pug
