--- a/src/pages/signup-page/signup-page.pug
+++ b/src/pages/signup-page/signup-page.pug
@@ -1,21 +1,6 @@
-include ../../components/header/header.pug
+extends ../layout.pug
 include ../../components/form-register/form-register.pug
-include ../../components/footer/footer.pug
-include ../../components/button/button.pug
-doctype html
-html
-  head
-    title Hotel signup page
-    meta(charset="UTF-8")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    meta(http-equiv="X-UA-Compatible", content="ie=edge")
-    meta(name="application-name" content="Toxin Hotel")
-  body
-    - var names = ['btn__signin_header', 'btn__confirm_size_footer', 'btn__confirm_size_signup', 'btn__confirm_size_search', 'btn__confirm_size_signin']
-    div(class='signup-page')
-      +header({links: ['О нас', 'Услуги', 'Вакансии', 'Новости', 'Соглашения'], names: ''})
-        +button({name: 'Войти', link: 'signin-page.html', additionalClass: (names.indexOf('btn__signin_header') > -1) ? 'btn__signin_header': ''})
-        +button({name: 'Зарегистрироватьcя', link: 'signup-page.html', className: 'btn__signup btn__signup_header'})
-      div(class='signup-page__background')
-        +form-register({ title: 'Регистрация аккаунта',  birthday: 'дата рождения', data: 'данные для входа в сервис', offer: 'Получать спецпредложения', login: 'Уже есть аккаунт на Toxin'})
-      +footer({slogan: 'Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»', offer:'Получайте специальные предложения и новости сервиса', copyright: 'Copyright © 2018 Toxin отель. Все права зачищены.'}, {name1: 'навигация', name2: 'о нас', name3: 'Служба поддержки', name4: 'Подписка'}, ['О нас', 'Новости', 'Служба поддержки', 'Услуги'], ['О сервисе', 'Наша команда', 'Вакансии', 'Инвесторы'], ['Соглашения', 'Сообщества', 'Связь с нами'])
+
+block content
+  div(class='signup-page__background')
+    +form-register({ addClass: 'signup_position', title: 'Регистрация аккаунта',  birthday: 'дата рождения', data: 'данные для входа в сервис', offer: 'Получать спецпредложения', login: 'Уже есть аккаунт на Toxin'})
