transferred components to blocks

--- a/src/blocks/btn-like/btn-like.scss
+++ b/src/blocks/btn-like/btn-like.scss
@@ -8,12 +8,10 @@
   cursor: pointer;
   min-width: 60px;
   height: 30px;
-  &:visited{
-    color:  #BC9CFF;;
+  &:visited {
+    color: #bc9cff;
   }
   &__quantity {
     margin-left: 5px;
   }
-  
 }
-
