--- a/src/components/room-page/room-page.pug
+++ b/src/components/room-page/room-page.pug
@@ -4,6 +4,7 @@ include ../../blocks/range-slider/range-slider.pug
 include ../../blocks/pagination/pagination.pug
 include ../../blocks/expandable-checkbox-list/expandable-checkbox-list.pug
 include ../../blocks/little-dropdown/little-dropdown.pug
+include ../../blocks/guests-dropdown/guests-dropdown.pug
 include ../../blocks/single-airdatepicker/single-airdatepicker.pug
 include ../../blocks/stars/stars.pug
 include ../sidebar/sidebar.pug
