--- a/src/pages/layout.pug
+++ b/src/pages/layout.pug
@@ -1,8 +1,8 @@
 //- base.pug
-include ../components/header/header.pug
-include ../components/form-search/form-search.pug
-include ../components/button/button.pug
-include ../components/footer/footer.pug
+include ../blocks/header/header.pug
+include ../blocks/form-search/form-search.pug
+include ../blocks/button/button.pug
+include ../blocks/footer/footer.pug
 html
   head
     title My Site 
