--- a/src/components/sidebar/sidebar.pug
+++ b/src/components/sidebar/sidebar.pug
@@ -25,7 +25,7 @@ mixin sidebar(sidebar)
             +checkbox({name:'Помощник для инвалидов', label:'Помощник для инвалидов',  nameClass: 'checkbox', boxClass: 'checkbox__label_descr'})
                 span(class='checkbox__span') На 1 этаже вас встретит специалист  и проводит до номера.'
         h3(class='sidebar__subtitle' class=(subtitles.indexOf('sidebar__subtitle_type_comfort') > -1) ? 'sidebar__subtitle_type_comfort': '') Удобства номера
-        +little-dropdown( {id: 'comfort-button', name: 'Удобства'}, { name:'спальни', number: 'bedroom_text', plus: 'bedroom_plus', minus: 'bedroom_minus'},  {name: 'кровати', number: 'bed_text', plus: 'bed_plus', minus: 'bed_minus' }, {name: 'ванные', number: 'bathroom_text', plus: 'bathroom_plus', minus: 'bathroom_minus'}, {id:'comfort-clean', title: 'очистить'}, {id:'comfort-apply', title: 'применить'})
+        +guests-dropdown( {id: 'comfort-button', name: 'Удобства'}, { name:'спальни', number: 'bedroom_text', plus: 'bedroom_plus', minus: 'bedroom_minus'},  {name: 'кровати', number: 'bed_text', plus: 'bed_plus', minus: 'bed_minus' }, {name: 'ванные', number: 'bathroom_text', plus: 'bathroom_plus', minus: 'bathroom_minus'}, {id:'comfort-clean', title: 'очистить'}, {id:'comfort-apply', title: 'применить'})
         div(class='sidebar__extracomfort')
             +expandable-checkbox-list('Дополнительные удобства')
                 ul(class='sidebar__checkboxes')
