--- a/src/pages/layout.pug
+++ b/src/pages/layout.pug
@@ -10,10 +10,9 @@ html
       script(src='/jquery.js')
   body
     block header
-        - var names = ['btn__signin_header', 'btn__confirm_size_footer', 'btn__confirm_size_signup', 'btn__confirm_size_search', 'btn__confirm_size_signin']
         - var signin = true;
         +header({links: ['О нас', 'Услуги', 'Вакансии', 'Новости', 'Соглашения'], names: ["/mock-address/change-me"]})
-            +button({name: 'Войти', link: 'signin-page.html', additionalClass: (names.indexOf('btn__signin_header') > -1) ? 'btn__signin_header': ''})
+            +button({name: 'Войти', link: 'signin-page.html', additionalClass: 'btn__signin_type_header'})
             +button({name:'Зарегистрироватьcя', link:'signup-page.html', className: 'btn__signup'})
     block content
     block foot
