fixed scroll for datepicker

--- a/src/blocks/expandable-checkbox-list/expandable-checkbox-list.pug
+++ b/src/blocks/expandable-checkbox-list/expandable-checkbox-list.pug
@@ -2,6 +2,6 @@ mixin expandable-checkbox-list(title)
     label(class='extracomfort')
         div(class='extracomfort__button' id='extracomfort__button')= title
         input(type='checkbox' class='extracomfort__input' id='extracomfort__input')
-        if block 
-            block
-
+        div(class='extracomfort__menu')
+            if block 
+                block
