--- a/src/blocks/expandable-checkbox-list/expandable-checkbox-list.scss
+++ b/src/blocks/expandable-checkbox-list/expandable-checkbox-list.scss
@@ -12,13 +12,14 @@
     &::after {
       content: "";
       padding: 6px;
-      box-shadow: 2px -2px 0 0 black inset;
+      box-shadow: 3px -3px 0 0 rgba(31, 32, 65, 0.5) inset;
       display: inline-block;
       transform: rotate(-45deg);
       position: absolute;
+      margin-top: 3px;
       left: 90%;
-      color: black;
-      
+      color: rgba(31, 32, 65, 0.5);
+      cursor: pointer;
     }
   }
   &__input {
