--- a/src/blocks/footer/footer.pug
+++ b/src/blocks/footer/footer.pug
@@ -35,7 +35,7 @@ mixin footer(footer, title, linkList1, linkList2, linkList3)
           p(class='footer__copyright')= footer.copyright 
           ul(class='footer__icons')
               li(class='footer__icon')
-                a(href="/mock-address/change-me")
+                a(href="/mock-address/change-me" class='footer__bond')
                   svg(width='0' height='0')
                     radialGradient(id='rg' r='150%' cx='30%' cy='107%')
                       stop(stop-color='#8BA4F9' offset='0')
@@ -46,7 +46,7 @@ mixin footer(footer, title, linkList1, linkList2, linkList3)
                   div(class='footer__gradient')
                     i(class='fab fa-twitter' aria-hidden='true')
               li(class='footer__icon')
-                a(href="/mock-address/change-me")
+                a(href="/mock-address/change-me"  class='footer__bond')
                   svg(width='0' height='0')
                     radialGradient(id='rg' r='150%' cx='30%' cy='107%')
                       stop(stop-color='#BC9CFF' offset='0')
@@ -57,7 +57,7 @@ mixin footer(footer, title, linkList1, linkList2, linkList3)
                   div(class='footer__gradient')
                     i(class='fab fa-facebook-square' aria-hidden='true')
               li(class='footer__icon')
-                a(href="/mock-address/change-me")
+                a(href="/mock-address/change-me"  class='footer__bond')
                   svg(width='0' height='0')
                     radialGradient(id='rg' r='150%' cx='30%' cy='107%')
                       stop(stop-color='#8BA4F9' offset='0')
