--- a/src/blocks/footer/footer.scss
+++ b/src/blocks/footer/footer.scss
@@ -65,15 +65,12 @@
     color: #1f2041;
     font-family: "Montserrat";
     font-weight: bold;
-    font-size: 1.14rem;
-    line-height: 33px;
     margin-left: 20px;
     margin-block-start: 0.8em;
     color: rgba(31, 32, 65, 0.75);
     font-family: "Montserrat";
     font-weight: bold;
     font-size: 1.14rem;
-    line-height: 33px;
   }
   &__slogan {
     margin-top: 20px;
@@ -88,6 +85,9 @@
     flex-wrap: wrap;
     justify-content: space-between;
   }
+  &__bond{
+    display: inline-block;
+  }
   &__icons {
     display: flex;
     flex-direction: row;
@@ -96,7 +96,6 @@
   &__icon {
     height: 30px;
     width: 40px;
-    margin-top: -25px;
     margin-right: 22px;
     cursor: pointer;
   }
@@ -105,6 +104,8 @@
     display: flex;
     font-size: 50px;
     color: red;
+    margin: 0;
+    padding: 0;
     & svg * {
       fill: url(#rg);
     }
