--- a/src/blocks/little-dropdown/little-dropdown.scss
+++ b/src/blocks/little-dropdown/little-dropdown.scss
@@ -12,11 +12,9 @@
     font-weight: normal;
     font-size: 1.14rem;
     line-height: 18px;
-    color: rgba(31, 32, 65, 0.35);
-    display: table-cell;
-    vertical-align: middle;
     padding-left: 20px;
     color: rgba(31, 32, 65, 0.75);
+    padding-top: 18px;
     &:after {
       content: "";
       padding: 6px;
@@ -50,7 +48,7 @@
     background-color: #ffffff;
     list-style-type: none;
     z-index: 10;
-    width: 416px;
+    width: 395px;
   }
   &__row {
     padding: 10px 20px;
@@ -122,7 +120,7 @@
 
 @media only screen and (max-width: 380px) {
   .little-dd {
-    &__item{
+    &__item {
       width: 300px;
     }
     &__menu {
